@@ -3,6 +3,8 @@ Timeline 0.21.0, released on 30 June 2013
 
 New features, enhancements:
 
+  * Added feature, Set category on selected events
+  * Added feature, Set category on events without category
   * Added 'Import' feature that makes it possible to merge timelines.
   * Added 'Edit Event' menu
   
